adds content images to index.html and catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="mainHeader">
       <a class="headerLogo" href="./index.html">
-        <img src="https://placehold.it/154x64" alt="" width="154" height="64">
+        <img src="./img/logo.svg" alt="Логотип магазина Gllacy" width="154" height="64">
       </a>
       <ul class="mainNavigation">
         <li>
@@ -78,7 +78,7 @@
                   </button>
                 </td>
                 <td class="basketGoodPreview">
-                  <img src="https://placehold.it/33x33" alt="Пломбир с апельсиновым джемом" width="33" height="33">
+                  <img src="./img/product-1-small.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33">
                 </td>
                 <td class="basketGoodDescription">
                   Пломбир с апельсиновым джемом
@@ -94,7 +94,7 @@
                   </button>
                 </td>
                 <td class="basketGoodPreview">
-                  <img src="https://placehold.it/33x33" alt="Пломбир с апельсиновым джемом" width="33" height="33">
+                  <img src="./img/product-3-small.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33">
                 </td>
                 <td class="basketGoodDescription">
                   Клубничный пломбир с присыпкой из белого шоколада
@@ -206,7 +206,7 @@
         <h2 class="visuallyHidden">Список товаров</h2>
         <ul class="productsList">
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
+            <img class="productImage" src="./img/product-1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">310&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -219,7 +219,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
+            <img class="productImage" src="./img/product-2.jpg" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">380&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -232,7 +232,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
+            <img class="productImage" src="./img/product-3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">355&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -245,7 +245,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
+            <img class="productImage" src="./img/product-4.jpg" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">415&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -258,7 +258,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с брусничным джемом" width="267" height="267">
+            <img class="productImage" src="./img/product-5.jpg" alt="Сливочное с брусничным джемом" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">325&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -271,7 +271,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-черничное с цельными ягодами черники" width="267" height="267">
+            <img class="productImage" src="./img/product-6.jpg" alt="Сливочно-черничное с цельными ягодами черники" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">410&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -284,7 +284,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-лимонное с карамельной присыпкой" width="267" height="267">
+            <img class="productImage" src="./img/product-7.jpg" alt="Сливочно-лимонное с карамельной присыпкой" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">375&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -297,7 +297,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с шоколадной стружкой" width="267" height="267">
+            <img class="productImage" src="./img/product-8.jpg" alt="Сливочное с шоколадной стружкой" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">320&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -310,7 +310,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-ванильное с кусочками шоколада" width="267" height="267">
+            <img class="productImage" src="./img/product-9.jpg" alt="Сливочно-ванильное с кусочками шоколада" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">440&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -323,7 +323,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с ментоловым сиропом" width="267" height="267">
+            <img class="productImage" src="./img/product-10.jpg" alt="Сливочное с ментоловым сиропом" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">435&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -336,7 +336,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с кусочками черного шоколада" width="267" height="267">
+            <img class="productImage" src="./img/product-11.jpg" alt="Сливочное с кусочками черного шоколада" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">355&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -349,7 +349,7 @@
             <a class="commonButton" href="#">Быстрый просмотр</a>
           </li>
           <li class="productsItem">
-            <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с мятным сиропом" width="267" height="267">
+            <img class="productImage" src="./img/product-12.jpg" alt="Сливочное с мятным сиропом" width="267" height="267">
             <p class="productPrice">
               <span class="productPriceValue">420&#8381;</span>
               <span class="productPriceMeasure">&#47;кг</span>
@@ -439,7 +439,7 @@
         </ul>
       </div>
       <div class="footerCopyright">
-        <img class="copyrightLogo" src="https://placehold.it/108x39" alt="Логотип HTML Academy" width="108" height="39">
+        <img class="copyrightLogo" src="./img/academy-logo.svg" alt="Логотип HTML Academy" width="108" height="39">
         <span>Сделано в <a class="footerCopyrightLink" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2018</span>
       </div>
     </footer>
