--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="mainHeader">
       <a class="headerLogo">
-        <img src="https://placehold.it/154x64" alt="" width="154" height="64">
+        <img src="./img/logo.svg" alt="Логотип магазина Gllacy" width="154" height="64">
       </a>
       <ul class="mainNavigation">
         <li>
@@ -100,17 +100,17 @@
           </ul>
           <ul class="sliderList">
             <li class="sliderOne">
-              <img class="sliderFigure" src="https://placehold.it/647x584" alt="Крем-брюле и пломбир с малиновым джемом" width="647" height="584">
+              <img class="sliderFigure" src="./img/slide-1.png" alt="Крем-брюле и пломбир с малиновым джемом" width="647" height="584">
               <h3 class="sliderHeader">Крем-брюле и пломбир с малиновым джемом</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
             <li class="sliderTwo">
-              <img class="sliderFigure" src="https://placehold.it/644x582" alt="Шоколадный пломбир и лимонный сорбет" width="644" height="582">
+              <img class="sliderFigure" src="./img/slide-2.png" alt="Шоколадный пломбир и лимонный сорбет" width="644" height="582">
               <h3 class="sliderHeader">Шоколадный пломбир и лимонный сорбет</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
             <li class="sliderThree">
-              <img class="sliderFigure" src="https://placehold.it/639x582" alt="Пломбир с помадкой и клубничный щербет" width="639" height="582">
+              <img class="sliderFigure" src="./img/slide-3.png" alt="Пломбир с помадкой и клубничный щербет" width="639" height="582">
               <h3 class="sliderHeader">Пломбир с помадкой и клубничный щербет</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
@@ -139,7 +139,7 @@
           <h2 class="visuallyHidden">Хиты продаж</h2>
           <ul class="hitsList">
             <li class="hitItem">
-              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
+              <img class="productImage" src="./img/product-1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
               <p class="productPrice">
                 <span class="productPriceValue">310&#8381;</span>
                 <span class="productPriceMeasure">&#47;кг</span>
@@ -152,7 +152,7 @@
               <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
+              <img class="productImage" src="./img/product-2.jpg" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
               <p class="productPrice">
                 <span class="productPriceValue">380&#8381;</span>
                 <span class="productPriceMeasure">&#47;кг</span>
@@ -165,7 +165,7 @@
               <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
+              <img class="productImage" src="./img/product-3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
               <p class="productPrice">
                 <span class="productPriceValue">355&#8381;</span>
                 <span class="productPriceMeasure">&#47;кг</span>
@@ -178,7 +178,7 @@
               <a class="commonButton" href="#">Быстрый просмотр</a>
             </li>
             <li class="hitItem">
-              <img class="productImage" src="https://placehold.it/267x267" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
+              <img class="productImage" src="./img/product-4.jpg" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
               <p class="productPrice">
                 <span class="productPriceValue">415&#8381;</span>
                 <span class="productPriceMeasure">&#47;кг</span>
@@ -302,7 +302,7 @@
         </ul>
       </div>
       <div class="footerCopyright">
-        <img class="copyrightLogo" src="https://placehold.it/108x39" alt="Логотип HTML Academy" width="108" height="39">
+        <img class="copyrightLogo" src="./img/academy-logo.svg" alt="Логотип HTML Academy" width="108" height="39">
         <span>Сделано в <a class="footerCopyrightLink" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2018</span>
       </div>
     </footer>
