--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <img src="./img/logo.svg" alt="Логотип магазина Gllacy" width="154" height="64">
       </a>
       <ul class="mainNavigation">
-        <li class="catalogContainer">
+        <li class="menuItemContainer">
           <a class="mainNavigationItem" href="#">
             <span>Каталог</span>
           </a>
-          <ul class="catalogList">
+          <ul class="catalogList navigationDropdown">
             <li>
               <a class="catalogItem catalogNewItem" href="#">Новинки</a>
             </li>
@@ -27,7 +27,7 @@
               <a class="catalogItem" href="#">Щербеты</a>
             </li>
             <li>
-              <a class="catalogItem" href="#">Фруктовый лед</a>
+              <a class="catalogItem" href="#">Фруктовый&nbsp;лед</a>
             </li>
             <li>
               <a class="catalogItem" href="#">Мелорин</a>
@@ -46,18 +46,18 @@
         </li>
       </ul>
       <ul class="userNavigation">
-        <li>
+        <li class="menuItemContainer searchContainer">
           <a class="userNavigationItem searchButton" href="#">
             <svg class="userNavigationIcon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="#ffffff">
               <path d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
             </svg>
             <span class="visuallyHidden">Поиск по сайту</span>
           </a>
-          <form class="userNavigationPopup" action="https://echo.htmlacademy.ru/" method="get">
+          <form class="navigationDropdown userNavigationPopup" action="https://echo.htmlacademy.ru/" method="get">
             <input class="userNavigationInput searchInput" type="search" name="search" placeholder="Что ищем?">
           </form>
         </li>
-        <li>
+        <li class="menuItemContainer loginContainer">
           <a class="userNavigationItem loginButton" href="#">
             <svg class="userNavigationIcon" xmlns="http://www.w3.org/2000/svg" width="21" height="19" viewBox="0 0 21 19" fill="#ffffff">
               <image width="21" height="19" overflow="visible"/>
@@ -66,9 +66,9 @@
             </svg>
             Вход
           </a>
-          <form class="userNavigationPopup" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="loginInput" type="email" name="email" placeholder="Электронная почта">
-            <input class="loginInput" type="password" name="password" placeholder="Пароль">
+          <form class="navigationDropdown userNavigationPopup" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="userNavigationInput loginInput" type="email" name="email" placeholder="Электронная почта">
+            <input class="userNavigationInput loginInput" type="password" name="password" placeholder="Пароль">
             <button class="commonButton" type="submit">Войти</button>
             <ul class="loginOption">
               <li>
@@ -80,7 +80,7 @@
             </ul>
           </form>
         </li>
-        <li>
+        <li class="menuItemContainer cartContainer">
           <a class="userNavigationItem cartButton" href="#">
             <span class="visuallyHidden">Корзина</span>
             <svg class="userNavigationIcon" xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="#ffffff">
@@ -104,35 +104,35 @@
           <h2 class="visuallyHidden">Сладкие парочки</h2>
           <ul class="sliderControls">
             <li>
-              <button class="sliderOneControl" type="button">
+              <button class="sliderControl sliderOneControl controlCurrent" type="button">
                 <span class="visuallyHidden">Первый слайд</span>
               </button>
             </li>
             <li>
-              <button class="sliderTwoControl" type="button">
+              <button class="sliderControl sliderTwoControl" type="button">
                 <span class="visuallyHidden">Второй слайд</span>
               </button>
             </li>
             <li>
-              <button class="sliderThreeControl" type="button">
+              <button class="sliderControl sliderThreeControl" type="button">
                 <span class="visuallyHidden">Третий слайд</span>
               </button>
             </li>
           </ul>
           <ul class="sliderList">
-            <li class="sliderOne">
+            <li class="sliderItem sliderOne sliderCurrent">
               <img class="sliderFigure" src="./img/slide-1.png" alt="Крем-брюле и пломбир с малиновым джемом" width="647" height="584">
-              <h3 class="sliderHeader">Крем-брюле и пломбир с малиновым джемом</h3>
+              <h3 class="sliderHeader">Крем-брюле и пломбир с&nbsp;малиновым&nbsp;джемом</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
-            <li class="sliderTwo">
+            <li class="sliderItem sliderTwo">
               <img class="sliderFigure" src="./img/slide-2.png" alt="Шоколадный пломбир и лимонный сорбет" width="644" height="582">
-              <h3 class="sliderHeader">Шоколадный пломбир и лимонный сорбет</h3>
+              <h3 class="sliderHeader">Шоколадный пломбир и&nbsp;лимонный&nbsp;сорбет</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
-            <li class="sliderThree">
+            <li class="sliderItem sliderThree">
               <img class="sliderFigure" src="./img/slide-3.png" alt="Пломбир с помадкой и клубничный щербет" width="639" height="582">
-              <h3 class="sliderHeader">Пломбир с помадкой и клубничный щербет</h3>
+              <h3 class="sliderHeader">Пломбир с помадкой и&nbsp;клубничный&nbsp;щербет</h3>
               <a class="commonButton sliderButton" href="#">Давайте оба!</a>
             </li>
           </ul>
@@ -140,14 +140,14 @@
         <section class="hotDeals">
           <h2 class="visuallyHidden">Горячие предложения</h2>
           <ul class="hotDealsList">
-            <li class="hotDealsItem">
+            <li class="hotDealsItem hotDealsRaspberry">
               <h3 class="hotDealsHeader">Малинка даром!</h3>
               <p class="hotDealsDescription">
                 При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
               </p>
               <a class="commonButton" href="#">Хочу варенье!</a>
             </li>
-            <li class="hotDealsItem">
+            <li class="hotDealsItem hotDealsChocolate">
               <h3 class="hotDealsHeader">Шоколадки даром!</h3>
               <p class="hotDealsDescription">
                 При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
@@ -159,57 +159,73 @@
         <section class="hits">
           <h2 class="visuallyHidden">Хиты продаж</h2>
           <ul class="hitsList">
-            <li class="hitItem">
-              <img class="productImage" src="./img/product-1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
-              <p class="productPrice">
-                <span class="productPriceValue">310&#8381;</span>
-                <span class="productPriceMeasure">&#47;кг</span>
-              </p>
-              <p class="productDescription">
-                <a href="#">
-                  Сливочное с апельсиновым джемом и цитрусовой стружкой
-                </a>
-              </p>
-              <a class="commonButton" href="#">Быстрый просмотр</a>
+            <li class="productsItem">
+              <div class="productContainer">
+                <div class="productImageContainer">
+                  <img class="productImage" src="./img/product-1.png" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой" width="267" height="267">
+                  <p class="productPrice">
+                    <span class="productPriceValue">310&#8381;</span>
+                    <span class="productPriceMeasure">&#47;кг</span>
+                  </p>
+                </div>
+                <p class="productDescription">
+                  <a class="commonLink" href="#">
+                    Сливочное с апельсиновым джемом и цитрусовой стружкой
+                  </a>
+                </p>
+                <a class="commonButton productItemButton" href="#">Быстрый просмотр</a>
+              </div>
             </li>
-            <li class="hitItem">
-              <img class="productImage" src="./img/product-2.jpg" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
-              <p class="productPrice">
-                <span class="productPriceValue">380&#8381;</span>
-                <span class="productPriceMeasure">&#47;кг</span>
-              </p>
-              <p class="productDescription">
-                <a href="#">
-                  Сливочно-кофейное с кусочками шоколада
-                </a>
-              </p>
-              <a class="commonButton" href="#">Быстрый просмотр</a>
+            <li class="productsItem">
+              <div class="productContainer">
+                <div class="productImageContainer">
+                  <img class="productImage" src="./img/product-2.png" alt="Сливочно-кофейное с кусочками шоколада" width="267" height="267">
+                  <p class="productPrice">
+                    <span class="productPriceValue">380&#8381;</span>
+                    <span class="productPriceMeasure">&#47;кг</span>
+                  </p>
+                </div>
+                <p class="productDescription">
+                  <a class="commonLink" href="#">
+                    Сливочно-кофейное с кусочками шоколада
+                  </a>
+                </p>
+                <a class="commonButton productItemButton" href="#">Быстрый просмотр</a>
+              </div>
             </li>
-            <li class="hitItem">
-              <img class="productImage" src="./img/product-3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
-              <p class="productPrice">
-                <span class="productPriceValue">355&#8381;</span>
-                <span class="productPriceMeasure">&#47;кг</span>
-              </p>
-              <p class="productDescription">
-                <a href="#">
-                  Сливочно-клубничное с присыпкой из белого шоколада
-                </a>
-              </p>
-              <a class="commonButton" href="#">Быстрый просмотр</a>
+            <li class="productsItem">
+              <div class="productContainer">
+                <div class="productImageContainer">
+                  <img class="productImage" src="./img/product-3.png" alt="Сливочно-клубничное с присыпкой из белого шоколада" width="267" height="267">
+                  <p class="productPrice">
+                    <span class="productPriceValue">355&#8381;</span>
+                    <span class="productPriceMeasure">&#47;кг</span>
+                  </p>
+                </div>
+                <p class="productDescription">
+                  <a class="commonLink" href="#">
+                    Сливочно-клубничное с присыпкой из белого шоколада
+                  </a>
+                </p>
+                <a class="commonButton productItemButton" href="#">Быстрый просмотр</a>
+              </div>
             </li>
-            <li class="hitItem">
-              <img class="productImage" src="./img/product-4.jpg" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
-              <p class="productPrice">
-                <span class="productPriceValue">415&#8381;</span>
-                <span class="productPriceMeasure">&#47;кг</span>
-              </p>
-              <p class="productDescription">
-                <a href="#">
-                  Сливочное крем-брюле с карамельной подливкой
-                </a>
-              </p>
-              <a class="commonButton" href="#">Быстрый просмотр</a>
+            <li class="productsItem">
+              <div class="productContainer">
+                <div class="productImageContainer">
+                  <img class="productImage" src="./img/product-4.png" alt="Сливочное крем-брюле с карамельной подливкой" width="267" height="267">
+                  <p class="productPrice">
+                    <span class="productPriceValue">415&#8381;</span>
+                    <span class="productPriceMeasure">&#47;кг</span>
+                  </p>
+                </div>
+                <p class="productDescription">
+                  <a class="commonLink" href="#">
+                    Сливочное крем-брюле с карамельной подливкой
+                  </a>
+                </p>
+                <a class="commonButton productItemButton" href="#">Быстрый просмотр</a>
+              </div>
             </li>
           </ul>
         </section>
@@ -219,17 +235,25 @@
             Магазин Глэйси &#8212; это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
           </p>
           <ul class="advantagesList">
-            <li class="advantagesItem">
-              Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+            <li class="advantagesItem advantagesEquipment">
+              <p>
+                Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+              </p>
             </li>
-            <li class="advantagesItem">
-              Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+            <li class="advantagesItem advantagesPartners">
+              <p>
+                Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+              </p>
             </li>
-            <li class="advantagesItem">
-              Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
+            <li class="advantagesItem advantagesRaw">
+              <p>
+                Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты и добавки произведены из натурального, экологически чистого сырья.
+              </p>
             </li>
-            <li class="advantagesItem">
-              Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+            <li class="advantagesItem advantagesDelivery">
+              <p>
+                Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+              </p>
             </li>
           </ul>
         </section>
